panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__test_empty_expression_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_empty_expression_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression ∅)
         (expression ∅)
         (expression ∅))))

----- stderr -----
