panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__test_variable_can_be_initialised_with_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_variable_can_be_initialised_with_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition a~1 `int` (42 `int`))
         (definition b~2 `int` (a~1 `int`))
         (return (b~2 `int`)))))

----- stderr -----
